[Extensions Bindings] Provide a better error for StorageArea invocations

Provide a better error when a developer invokes a storage area method
incorrectly. Add a unittest for the same.

Bug: 848904
Change-Id: If3c27d29d35bebb710318333937deecf954c5cbc
Reviewed-on: https://chromium-review.googlesource.com/1085486
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564224}
Former-commit-id: b1c38f6465d5dd12d2e848dde1da790692de9e43