extensions/renderer/storage_area.cc
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/strings/stringprintf.h"
 #include "extensions/common/api/storage.h"
 #include "extensions/renderer/bindings/api_binding_util.h"
+#include "extensions/renderer/bindings/api_invocation_errors.h"
 #include "extensions/renderer/bindings/api_request_handler.h"
 #include "extensions/renderer/bindings/api_signature.h"
 #include "extensions/renderer/bindings/api_type_reference_map.h"
@@ -214,7 +215,8 @@ void StorageArea::HandleFunctionCall(const std::string& method_name,
   if (!signature->ParseArgumentsToJSON(context, argument_list, *type_refs_,
                                        &converted_arguments, &callback,
                                        &error)) {
-    arguments->ThrowTypeError("Invalid invocation");
+    arguments->ThrowTypeError(api_errors::InvocationError(
+        full_method_name, signature->GetExpectedSignature(), error));
     return;
   }
 
